[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/cutscene/Cutscene.gd" type="Script" id=1]
[ext_resource path="res://src/cutscene/GemCollect.gd" type="Script" id=2]
[ext_resource path="res://src/cutscene/GoalShow.gd" type="Script" id=3]
[ext_resource path="res://src/cutscene/Clock.gd" type="Script" id=4]
[ext_resource path="res://src/cutscene/StartGame.gd" type="Script" id=6]

[node name="Cutscene" type="Node"]
script = ExtResource( 1 )

[node name="StartGame" type="Node" parent="."]
script = ExtResource( 6 )

[node name="GoalShow" type="Node" parent="."]
script = ExtResource( 3 )

[node name="GemCollect" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Clock" type="Node" parent="."]
script = ExtResource( 4 )
